--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="portofolio.html">Portfolio</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">About</a>
+                <li class="nav-item active"> 
+                    <a class="nav-link" href="index.html">About</a>
                 </li>
             </ul>
         </div>
