fixed card pictures and margins

--- a/portofolio.html
+++ b/portofolio.html
@@ -56,7 +56,7 @@
                   </div> -->
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Assets/Images/website-destinations-dreamland.jpg"
+                        <img class="card-img-top" src="Assets/Images/website-professionals-enright.jpg"
                             alt="Card image cap">
                         <!-- <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -67,9 +67,9 @@
 
                 </div>
 
-                <div class="card-deck">
+                <div style="margin-top: 2em;" class="card-deck">
                     <div class="card">
-                        <img class="card-img-top" src="Assets/Images/website-destinations-dreamland.jpg"
+                        <img class="card-img-top" src="Assets/Images/website-professionals-KVLM.jpg"
                             alt="Card image cap">
                         <!-- <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -78,7 +78,7 @@
                   </div> -->
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Assets/Images/website-destinations-dreamland.jpg"
+                        <img class="card-img-top" src="Assets/Images/website-retail-Gershow.png"
                             alt="Card image cap">
                         <!-- <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -88,9 +88,9 @@
                     </div>
 
             </div>
-            <div class="card-deck">
+            <div style="margin-top: 2em;" class="card-deck">
                 <div class="card">
-                    <img class="card-img-top" src="Assets/Images/website-destinations-dreamland.jpg"
+                    <img class="card-img-top" src="Assets/Images/website-retail-Laxworx.png"
                         alt="Card image cap">
                     <!-- <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -98,25 +98,13 @@
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                   </div> -->
                 </div>
-                <div class="card">
+                <div style="visibility: hidden;" class="card">
                     <img class="card-img-top" src="Assets/Images/website-destinations-dreamland.jpg"
                         alt="Card image cap">
                     <!-- <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     
-                  </div> -->
-                </div>
-
-            </div>
-            <div class="card-deck">
-                <div class="card">
-                    <img style="width: 350px; height: 350px; margin:3em;" class="card-img-top" src="Assets/Images/website-destinations-dreamland.jpg"
-                        alt="Card image cap">
-                    <!-- <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                   </div> -->
                 </div>
 
