corrected text to align left of the index.html

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/Assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="Assets/css/style.css" />
 </head>
 
 <body>
@@ -37,7 +37,7 @@
     <main style="background-image: url('Assets/Images/backpic.png'); padding-top: 35px; padding-bottom: 35px;"
         class="main">
         <div class="card bg-light mb-3"
-            style="background-color: white; max-width: 50rem; height:650px; margin: 25px 25px">
+            style="background-color: white; max-width: 50rem; overflow: auto; margin: 25px 25px">
             <div style="background-color: white;" class="card-body">
                 <p style="background-color: white;" class="card-text">
                 <div style="background-color: white; margin: 50px" class="card-header">
