took out the paragraph in the first line of card

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
     <main style="background-image: url('Assets/Images/backpic.png'); padding-top: 35px; padding-bottom: 35px;" class="main">
        
-        <div class="card bg-light mb-3" style="background-color: white; max-width: 50rem; overflow: auto; margin: 25px 25px">
+        <div class="card bg-light mb-3" style="background-color: white; max-width:50rem; overflow: auto; margin: 25px 25px">
             <div style="background-color: white;" class="card-body">
                 <p style="background-color: white;" class="card-text">
-                    <div style="background-color: white; margin: 50px" class="card-header">
+                    <div style="background-color: white;" class="card-header">
                         <h1 style="color: rgb(26, 175, 170)"> About Me </h1>
                     </div>
                 
@@ -50,8 +50,8 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eos reiciendis dolorem officia sunt 
                     laudantium quis sed facilis, dignissimos dolore beatae, earum accusantium tempora at sequi rem, a necessitatibus. 
                     Earum.
-                    <br>
-                    <br>
+                    <br/>
+                    <br/>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, corrupti debitis? Temporibus non animi minima 
                     molestiae, est vel cupiditate esse, fugiat culpa incidunt, accusamus pariatur magni aliquam magnam nihil ullam.
                 </p>
