--- a/contact.html
+++ b/contact.html
@@ -36,9 +36,9 @@
 
     <main style="background-image: url('Assets/Images/backpic.png'); padding-top: 35px; padding-bottom: 35px;"
         class="main">
-        <div class="card bg-light mb-3"
-            style="background-color: white; max-width: 50rem; overflow: auto; margin: 25px 25px">
-            <div style="background-color: white;" class="card-body">
+        <!-- <div class="card bg-light mb-3"
+            style="background-color: white; max-width: 50rem; overflow: auto; margin: 25px 25px"> -->
+            <div style="background-color: white; max-width: 50rem; overflow: auto; margin: 25px 25px" class="card-body">
                 <div style="background-color: white; margin: 50px" class="card-header">
                     <h1 style="color: rgb(26, 175, 170)"> Contact </h1>
                 </div>
@@ -59,7 +59,7 @@
                     
                 </div>
             </div>
-        </div>
+        <!-- </div> -->
     </main>
     <footer>
         <hr style="background-color:  rgb(26, 175, 170); padding: 0.5em; margin: 0;">
