--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
     <main style="background-image: url('Assets/Images/backpic.png'); padding-top: 35px; padding-bottom: 35px;" class="main">
        
-        <div class="card bg-light mb-3" style="background-color: white; max-width:50rem; overflow: auto; margin: 25px 25px">
-            <div style="background-color: white;" class="card-body">
+       <!-- <div class="card bg-light mb-3"
+            style="background-color: white; max-width: 50rem; overflow: auto; margin: 25px 25px"> -->
+            <div style="background-color: white; max-width: 50rem; overflow: auto; margin: 25px 25px" class="card-body">
                 <p style="background-color: white;" class="card-text">
                     <div style="background-color: white;" class="card-header">
                         <h1 style="color: rgb(26, 175, 170)"> About Me </h1>
@@ -56,7 +57,7 @@
                     molestiae, est vel cupiditate esse, fugiat culpa incidunt, accusamus pariatur magni aliquam magnam nihil ullam.
                 </p>
             </div>
-        </div>
+        <!-- </div> -->
     
     </main>
     <footer>
