Fixed the navigational bar to be on the top at all times with nav-bar fixed-top

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end">
+    <!-- Fixed the navigational bar to be on the top at all times with nav-bar fixed-top -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end nav-bar fixed-top">
         <a style="background-color: rgb(26, 175, 170); color: white;" class="navbar-brand" href="#">Jane Sferrazza</a>
         <button style="visibility: hidden;" class="btn btn-success ml-auto mr-1">Always Show</button>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
