--- a/portofolio.html
+++ b/portofolio.html
@@ -15,7 +15,8 @@
     </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end">
+     <!-- Fixed the navigational bar to be on the top at all times with nav-bar fixed-top -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end nav-bar fixed-top">
         <a style="background-color: rgb(26, 175, 170); color: white;" class="navbar-brand" href="#">Jane Sferrazza</a>
         <button style="visibility: hidden;" class="btn btn-success ml-auto mr-1">Always Show</button>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -46,7 +47,7 @@
                 </div>
                 <div class="card-deck">
                     <div class="card">
-                        <img class="card-img-top" src="Assets/Images/website-destinations-dreamland.jpg"
+                        <a href="http://dreamlandamusements.com/"> <img class="card-img-top" src="Assets/Images/website-destinations-dreamland.jpg"
                             alt="Card image cap">
                         <!-- <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -98,8 +99,9 @@
                   </div> -->
                 </div>
                 <div style="visibility: hidden;" class="card">
-                    <img class="card-img-top" src="Assets/Images/website-destinations-dreamland.jpg"
+                    <a href="http://dreamlandamusements.com/"> <img class="card-img-top" src="Assets/Images/website-destinations-dreamland.jpg"
                         alt="Card image cap">
+                    </a>
                     <!-- <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
