--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end">
+     <!-- Fixed the navigational bar to be on the top at all times with nav-bar fixed-top -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end nav-bar fixed-top">
         <a style="background-color: rgb(26, 175, 170); color: white;" class="navbar-brand" href="index.html">Jane Sferrazza</a>
         <button style="visibility: hidden;" class="btn btn-success ml-auto mr-1">Always Show</button>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
