--- a/contact.html
+++ b/contact.html
@@ -28,39 +28,39 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="portofolio.html">Portfolio</a>
                 </li>
-                <li class="nav-item active"> 
+                <li class="nav-item active">
                     <a class="nav-link" href="index.html">About</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <main style="background-image: url('Assets/Images/backpic.png'); padding-top: 35px; padding-bottom: 35px;"
-        class="main">
-        <!-- <div class="card bg-light mb-3"
-            style="background-color: white; max-width: 50rem; overflow: auto; margin: 25px 25px"> -->
+    <main>
+        <div class="card bg-light mb-3">
             <div style="background-color: white; max-width: 50rem; overflow: auto; margin: 25px 25px" class="card-body">
+
                 <div style="background-color: white; margin: 50px" class="card-header">
                     <h1 style="color: rgb(26, 175, 170)"> Contact </h1>
                 </div>
                 <div class="container">
                     <!-- <div class="mb-3"> -->
-                        <label for="exampleFormControlInput1" class="form-label">Name</label>
-                        <input type="name" class="form-control" id="exampleFormControlInput1"
-                            placeholder="Name" />
-                        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1"
-                            placeholder="Email" />
+                    <label for="exampleFormControlInput1" class="form-label">Name</label>
+                    <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Name" />
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email" />
                     <!-- </div> -->
                     <!-- <div class="mb-3"> -->
-                        <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Message" ></textarea>
-                        <button style="margin:1em 1em; background-color: rgb(26, 175, 170); padding: 1em 2em; color: white; border:rgb(26, 175, 170);" type="button">Submit</button>
+                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                        placeholder="Message"></textarea>
+                    <button
+                        style="margin:1em 1em; background-color: rgb(26, 175, 170); padding: 1em 2em; color: white; border:rgb(26, 175, 170);"
+                        type="button">Submit</button>
                     <!-- </div> -->
-                    
+
                 </div>
             </div>
-        <!-- </div> -->
+            <!-- </div> -->
     </main>
     <footer>
         <hr style="background-color:  rgb(26, 175, 170); padding: 0.5em; margin: 0;">
