added links to the pics

--- a/portofolio.html
+++ b/portofolio.html
@@ -45,17 +45,19 @@
                 </div>
                 <div class="card-deck">
                     <div class="card">
-                        <a href="http://dreamlandamusements.com/"> <img class="card-img-top"
-                                src="Assets/Images/website-destinations-dreamland.jpg" alt="Card image cap">
-                            <!-- <div class="card-body">
+                        <a href="http://dreamlandamusements.com/" target="_blank"> <img class="card-img-top"
+                                src="Assets/Images/website-destinations-dreamland.jpg" alt="Card image cap"></a>
+                        <!-- <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                   </div> -->
                     </div>
                     <div class="card">
-                        <a href="http://dreamlandamusements.com/"></a><img class="card-img-top"
-                            src="Assets/Images/website-professionals-enright.jpg" alt="Card image cap">
+                        <a href="http://enrightstentel.com/" target="_blank"><img class="card-img-top"
+                                src="Assets/Images/website-professionals-enright.jpg" alt="Card image cap">
+                        </a>
+
                         <!-- <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -67,8 +69,9 @@
 
                 <div style="margin-top: 2em;" class="card-deck">
                     <div class="card">
-                        <img class="card-img-top" src="Assets/Images/website-professionals-KVLM.jpg"
-                            alt="Card image cap">
+                        <a href="http://www.kvlsmcpa.com/" target="_blank">
+                            <img class="card-img-top" src="Assets/Images/website-professionals-KVLM.jpg"
+                                alt="Card image cap"></a>
                         <!-- <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -76,18 +79,16 @@
                   </div> -->
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="Assets/Images/website-retail-Gershow.png" alt="Card image cap">
-                        <!-- <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                    
-                  </div> -->
+                        <a href="http://www.gershow.com/" target="_blank">
+                            <img class="card-img-top" src="Assets/Images/website-retail-Gershow.png"
+                                alt="Card image cap"></a>
+
                     </div>
 
                 </div>
                 <div style="margin-top: 2em;" class="card-deck">
                     <div class="card">
-                        <a href="http://dreamlandamusements.com/"> <img class="card-img-top"
+                        <a href="https://laxworx.com/" target="_blank"> <img class="card-img-top"
                                 src="Assets/Images/website-retail-Laxworx.png" alt="Card image cap"></a>
                         <!-- <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -96,7 +97,7 @@
                   </div> -->
                     </div>
                     <div style="visibility: hidden;" class="card">
-                        <a href="http://dreamlandamusements.com/"> <img class="card-img-top"
+                        <a href="http://dreamlandamusements.com/" target="_blank"> <img class="card-img-top"
                                 src="Assets/Images/website-destinations-dreamland.jpg" alt="Card image cap">
                         </a>
                         <!-- <div class="card-body">
