--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
     </nav>
 
 
-    <main>
-
+    <main class="main">
         <div class="card bg-light mb-3">
             <div style="background-color: white; max-width: 50rem; overflow: auto; margin: 25px 25px" class="card-body">
-
                 <h1 style="color: rgb(26, 175, 170)"> About Me </h1>
-
+                <hr>
+                </hr>
                 <img style="float:left; margin: 5px;" src="Assets/Images/landscapeimage.png"
                     alt="landscapeimage pic " />
                 <p style="background-color: white;" class="card-text"></p>
@@ -68,7 +67,7 @@
 
     </main>
     <footer>
-        <hr style="background-color:  rgb(26, 175, 170); padding: 0.5em; margin: 0;">
+        <hr class="lineinFooter">
         </hr>
         <p style="background-color: gray; padding: 2em; margin: 0;text-align: center;">&copy; Copyright</p>
     </footer>
