--- a/index.html
+++ b/index.html
@@ -47,20 +47,16 @@
                 <h1 style="color: rgb(26, 175, 170)"> About Me </h1>
                 <hr>
                 </hr>
-                <img style="float:left; margin: 5px;" src="Assets/Images/landscapeimage.png"
+                <img style="float:left; margin: 5px;" src="./goodpic.jpeg"
                     alt="landscapeimage pic " />
                 <p style="background-color: white;" class="card-text"></p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eos reiciendis dolorem officia
-                sunt
-                laudantium quis sed facilis, dignissimos dolore beatae, earum accusantium tempora at sequi rem, a
-                necessitatibus.
-                Earum.
+                Web Developer & Technical Trainer A dynamic web designer and applications trainer with freelance, agency and classroom, virtual
+and individual teaching experience. Develops customized curricula and designs solutions to improve productivity and implement best
+practices. Collaborates with organizational stakeholders to deliver a product fully aligned with needs and expectations. Leverages
+both creative and technical approaches to create best-in-class websites and training programs., Areas of Expertise Consultation ~
+Client Relations ~ Compliance ~ Innovative Solutions Project Management ~ Leadership ~ Presentations ~ Cross Functional
+Collaboration ~ Issue Resolution ~ Research
                 <br />
-                <br />
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, corrupti debitis? Temporibus non animi
-                minima
-                molestiae, est vel cupiditate esse, fugiat culpa incidunt, accusamus pariatur magni aliquam magnam nihil
-                ullam.
                 </p>
             </div>
         </div>
