--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 Web Developer & Technical Trainer A dynamic web designer and applications trainer with freelance, agency and classroom, virtual
 and individual teaching experience. Develops customized curricula and designs solutions to improve productivity and implement best
 practices. Collaborates with organizational stakeholders to deliver a product fully aligned with needs and expectations. Leverages
-both creative and technical approaches to create best-in-class websites and training programs., Areas of Expertise Consultation ~
+both creative and technical approaches to create best-in-class websites and training programs. Areas of Expertise Consultation ~
 Client Relations ~ Compliance ~ Innovative Solutions Project Management ~ Leadership ~ Presentations ~ Cross Functional
 Collaboration ~ Issue Resolution ~ Research
                 <br />
