changed links on portfolio

--- a/portofolio.html
+++ b/portofolio.html
@@ -48,8 +48,8 @@
                         <h4 style="text-align: center;">Weather-Map Dashboard</h4>
                         
                         <a href="https://janesferr.github.io/Weather-Map/" target="_blank"> <img class="card-img-top"
-                                src="Assets/Images/WeatherScreenshot.png" alt="Link to my Weather-Map"></a>
-                    <h6>Description: This is a website that can give you the weather by entering a city in the US. </h6>
+                                src="Assets/Images/WeatherScreenshot.png" alt="Link to my Weather-Map">
+                    <h6>Description: This is a website that can give you the weather by entering a city in the US. </h6></a>
                         <a class="btn btn-info" href="https://github.com/janesferr/Weather-Map ">Github Repo</a>
                         
                     </div>
